--- a/pages/home/home.css
+++ b/pages/home/home.css
@@ -1,5 +1,8 @@
 body{
     background: linear-gradient(180.96deg, #39289F 0.82%, #422F9C 129.1%);
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 10rem;
 }
 
 
@@ -46,7 +49,6 @@ body{
     color: #fff;
 }   
 
-
 #ctgames-gallery{
     max-width: 114.6rem;
     display: flex;
@@ -90,3 +92,79 @@ body{
     line-height: 4.125rem;
     color: #FFFFFF;
 }
+
+
+
+
+#recentprojects-container{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 7.1rem;
+}
+
+#recentprojects-container > button{
+    width: 13.9rem;
+    height: 5.7rem;
+    border-radius: 1rem;
+    background: #FFFFFF1C;
+
+    font-family: Rubik;
+    font-size: 2.0rem;
+    font-weight: 500;
+    line-height: 3.75rem;
+    text-align: center;
+    color: #fff;
+}
+
+#recentprojects-scope{
+    max-width: 114.6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column nowrap;
+    gap: 1.5rem;
+}
+
+#recentprojects-scope > h3{
+    color: #fff;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 56.25px;
+    text-align: center;
+    
+}
+
+#recentprojects-scope > p{
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 2.625rem;
+    text-align: center;
+    color: #FFFFFF;
+    width: 497px;
+    height: 57px;
+}
+
+#recentprojects-gallery{
+    max-width: 117rem;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 2.7rem;
+    
+}
+
+#recentprojects-gallery > img{
+    border-radius: 2rem;
+    height: 22.3rem;
+}
+
+#recentprojects-gallery > img:nth-child(1){width: 38.2rem;}
+#recentprojects-gallery > img:nth-child(2){width: 38.2rem;}
+#recentprojects-gallery > img:nth-child(3){width: 35.2rem;}
+#recentprojects-gallery > img:nth-child(4){width: 24.6rem;}
+#recentprojects-gallery > img:nth-child(5){width: 40.1rem;}
+#recentprojects-gallery > img:nth-child(6){width: 46.9rem;}
