feat: add lorem ipsum section to home page

--- a/pages/home/home.css
+++ b/pages/home/home.css
@@ -96,6 +96,14 @@ body{
 
 
 
+
+
+
+
+
+
+
+
 #recentprojects-container{
     display: flex;
     flex-flow: column wrap;
@@ -168,3 +176,125 @@ body{
 #recentprojects-gallery > img:nth-child(4){width: 24.6rem;}
 #recentprojects-gallery > img:nth-child(5){width: 40.1rem;}
 #recentprojects-gallery > img:nth-child(6){width: 46.9rem;}
+
+
+
+
+
+
+
+
+
+#loremipsum-container{
+    width: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 7.4rem;
+}
+
+#loremipsum-scope{
+    width: 1170px;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 3.2rem;
+}
+
+#loremipsum-scope > h3{
+    font-size: 3rem;
+    font-weight: 600;
+    line-height: 5.625rem;
+    color: #fff;
+}
+
+#loremipsum-scope > p{
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 3rem;
+    text-align: left;
+    width: 54.5rem;
+    height: 5.7rem;
+    color: #fff;
+}
+
+#loremipsum-card{
+    width: 117rem;
+    height: 18.9rem;
+    border-radius: 1.5rem;
+    background: #1C140F;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 4.232rem;
+}
+
+#loremipsum-desc{
+    width: 63.6rem;
+    height: 10.7rem;
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 1rem;
+}
+
+#loremipsum-desc > h3{
+    font-family: Poppins;
+    font-size: 3rem;
+    font-weight: 500;
+    line-height: 4.5rem;
+    text-align: left;
+    color: #fff;
+}
+
+#loremipsum-desc > p{
+    font-family: Poppins;
+    font-size: 1.7rem;
+    font-weight: 400;
+    line-height: 2.55rem;
+    text-align: left;
+    color: #fff;
+    width: 53.6rem;
+    height: 5.2rem;
+}
+
+#loremipsum-inputgroup{
+    width: 38.568rem;
+    height: 4.8rem;
+    border-radius: 0.8rem;
+    opacity: 0px;
+    background-color: #fff;
+
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#loremipsum-inputgroup > input{
+    font-family: Poppins;
+    font-size: 1.3rem;
+    font-weight: 300;
+    line-height: 1.95rem;
+    text-align: center; 
+
+    margin-left: 2.055rem;
+}
+
+#loremipsum-inputgroup > button{
+    width: 10.5rem;
+    height: 3.7rem;
+    border-radius: 0.8rem;
+    background: #DC7000;
+
+    font-size: 1.3rem;
+    font-weight: 400;
+    line-height: 1.95rem;
+    text-align: center;
+    color: #fff;
+
+    margin-right: 0.974rem;
+}
