--- a/index.css
+++ b/index.css
@@ -8,5 +8,6 @@
     border: none;
     text-decoration: none;
     font-size: 10px;
+    box-sizing: border-box; /* Garante que o padding não cause overflow */
     font-family: Poppins;
 }
