--- a/pages/home/home.css
+++ b/pages/home/home.css
@@ -2,7 +2,7 @@ body{
     background: linear-gradient(180.96deg, #39289F 0.82%, #422F9C 129.1%);
     display: flex;
     flex-flow: column nowrap;
-    gap: 10rem;
+    gap: 10.5rem;
 }
 
 
@@ -161,7 +161,7 @@ body{
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
-    gap: 2.7rem;
+    gap: 3.3rem 2.7rem;
     
 }
 
@@ -275,14 +275,20 @@ body{
 }
 
 #loremipsum-inputgroup > input{
-    font-family: Poppins;
     font-size: 1.3rem;
     font-weight: 300;
     line-height: 1.95rem;
-    text-align: center; 
 
     margin-left: 2.055rem;
+    width: 15.51rem;
+    height: 2rem;
 }
+
+#loremipsum-inputgroup > input:focus{
+    outline: none;
+    border: none;
+}
+
 
 #loremipsum-inputgroup > button{
     width: 10.5rem;
@@ -298,3 +304,126 @@ body{
 
     margin-right: 0.974rem;
 }
+
+
+
+
+
+
+
+
+
+#plataform-games-container {
+    width: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+    gap: 9.9rem;
+    padding: 9.3rem 1.98rem 9.2rem 1.97rem;
+
+    background-image: url('../../assets/home/plataform-games/img-background.png');
+    background-size: cover;
+    background-position: center;
+    position: relative; 
+    overflow: hidden; 
+}
+
+#plataform-games-container::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.54), rgba(0, 0, 0, 0.54)),
+                linear-gradient(0deg, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65));
+    z-index: 1; 
+    overflow: hidden; 
+    pointer-events: none;
+}
+
+#plataform-games-container > * {
+    position: relative;
+    z-index: 2; 
+}
+
+#plataform-games-scope{
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+    gap: 2.5rem;
+}
+
+#plataform-games-scope > h3{
+    font-size: 3rem;
+    font-weight: 700;
+    line-height: 5.625rem;
+    text-align: center;
+    color: #fff;
+    width: 82.6rem;
+    height: 11.2rem;
+}
+
+#plataform-games-scope > p{
+    font-family: Poppins;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 3rem;
+    text-align: center;
+    width: 82rem;
+    height: 6rem;
+    color: #fff;
+}
+
+#plataform-games-gallery{
+    max-width: 104.5rem;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+    gap: 6.2rem 10rem;
+}
+
+.plataform-games-cards{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column nowrap;
+    gap: 2.4rem;
+}
+
+.plataform-games-cards > div{
+    width: 6.5rem;
+    height: 6.5rem;
+    border-radius: 5rem;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.plataform-games-cards > div > img{
+    width: 2.975rem;
+    height: 2.975rem;
+}
+
+.plataform-games-cards > p{
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 3rem;
+    text-align: center;
+    color: #fff;
+    max-width: 22rem;
+    height: 3rem;
+}
+
+.plataform-games-cards > img{
+    width: 2.1rem;
+    height: 2.1rem;
+}
+
+
+
