add email validation to 'Stay in the Loop' card and social media links in the front section of contact-us page

--- a/pages/contact-us/contact-us.css
+++ b/pages/contact-us/contact-us.css
@@ -461,6 +461,6 @@ form > button{
     line-height: 1.95rem;
     text-align: center;
     color: #fff;
-
+    cursor: pointer;
     margin-right: 0.974rem;
 }
