--- a/pages/contact-us/contact-us.css
+++ b/pages/contact-us/contact-us.css
@@ -14,7 +14,7 @@ body{
     padding-bottom: 10rem;
 }
 
-#front-container{
+#contactus-container > #front-container{
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
@@ -334,138 +334,4 @@ form > button{
     resize: none; 
     vertical-align: top; 
     font-size: 1.5rem;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-#loremipsum-container{
-    width: 100%;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-    gap: 7.4rem;
-}
-
-#loremipsum-scope{
-    width: 117rem;
-
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 3.2rem;
-}
-
-#loremipsum-scope > h3{
-    font-size: 3rem;
-    font-weight: 600;
-    line-height: 5.625rem;
-    color: #fff;
-}
-
-#loremipsum-scope > p{
-    font-size: 1.6rem;
-    font-weight: 400;
-    line-height: 3rem;
-    text-align: left;
-    width: 54.5rem;
-    height: 5.7rem;
-    color: #fff;
-}
-
-#loremipsum-card{
-    width: 117rem;
-    height: 18.9rem;
-    border-radius: 1.5rem;
-    background: #1C140F;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 4.232rem;
-}
-
-#loremipsum-desc{
-    width: 63.6rem;
-    height: 10.7rem;
-    display: flex;
-    flex-flow: column nowrap;
-    gap: 1rem;
-}
-
-#loremipsum-desc > h3{
-    font-family: Poppins;
-    font-size: 3rem;
-    font-weight: 500;
-    line-height: 4.5rem;
-    text-align: left;
-    color: #fff;
-}
-
-#loremipsum-desc > p{
-    font-family: Poppins;
-    font-size: 1.7rem;
-    font-weight: 400;
-    line-height: 2.55rem;
-    text-align: left;
-    color: #fff;
-    width: 53.6rem;
-    margin-bottom: -0.5rem;
-
-}
-
-#loremipsum-inputgroup{
-    width: 38.568rem;
-    height: 4.8rem;
-    border-radius: 0.8rem;
-    opacity: 0px;
-    background-color: #fff;
-
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: space-between;
-}
-
-#loremipsum-inputgroup > input{
-    font-size: 1.3rem;
-    font-weight: 300;
-    line-height: 1.95rem;
-
-    margin-left: 2.055rem;
-    width: 15.51rem;
-    height: 2rem;
-}
-
-#loremipsum-inputgroup > input:focus{
-    outline: none;
-    border: none;
-}
-
-
-#loremipsum-inputgroup > button{
-    width: 10.5rem;
-    height: 3.7rem;
-    border-radius: 0.8rem;
-    background: #DC7000;
-
-    font-size: 1.3rem;
-    font-weight: 400;
-    line-height: 1.95rem;
-    text-align: center;
-    color: #fff;
-    cursor: pointer;
-    margin-right: 0.974rem;
 }
