--- a/pages/error/error.css
+++ b/pages/error/error.css
@@ -1,5 +1,4 @@
 body{
-    background: linear-gradient(176.32deg, #2211E7 -26.24%, #383837 96.98%);
 }
 
 #error-container{
@@ -8,10 +7,15 @@ body{
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+    max-height: 100vh;
+    background-image: url('../../assets/error/img-bg.png'); /* Caminho da imagem */
+    background-size: cover; /* Faz a imagem cobrir toda a área */
+    background-position: center; /* Centraliza a imagem */
+    background-repeat: no-repeat; /* Evita repetição da imagem */
 }
 
 #error-layout{
-    max-width: 70rem;
+    max-width: 55rem;
     padding: 5rem;
     border-radius: 2rem;
     display: flex;
@@ -19,20 +23,20 @@ body{
     justify-content: center;
     flex-flow: column wrap;
     gap: 5rem;
-    background-color: rgb(36, 35, 35);
+    background: linear-gradient(176.32deg, rgba(34, 17, 231, 0.3) -26.24%, rgba(56, 56, 55, 0.3) 96.98%);
+    opacity: 0.75;
 }
 #error-layout > img{
-    width: 30rem;
-    height: 30rem;
-    background:#2211E7;
-    padding: 2rem;
+    width: 20rem;
+    height: 20rem;
+    padding: 1rem;
     border-radius: 50rem;
 }
 #error-layout > h1{
     color: #fff;
     width: 100%;
     text-align: center;
-    font-size: 3.3rem;
+    font-size: 2.50rem;
     font-weight: 600;
     line-height: 5.956rem;
 }
@@ -46,7 +50,6 @@ body{
     font-weight: 400;
     line-height: 3.269rem;
     color: #fff;
-    cursor: pointer;
 }
 
 .spin{
@@ -60,4 +63,18 @@ body{
     to {
         transform: rotate(360deg);
     }
+}
+
+
+
+@media (max-width: 767px) {
+        
+    #error-layout{
+        border-radius: 0;
+    }
+
+}
+
+@media (max-width: 1215px) {
+
 }
