--- a/pages/header/header.css
+++ b/pages/header/header.css
@@ -11,7 +11,7 @@ header{
     padding: 7rem 0;
 
     display: flex;
-    flex: row wrap;
+    flex-flow: row wrap;
     align-items: center;
     justify-content: space-between;
 }
@@ -64,10 +64,6 @@ header{
 }
 
 #nav-container > nav{
-    width: auto;
-    height: auto;
-}
-#nav-container > nav > ul{
     display: flex;
     flex-flow: row wrap;
     align-items: center;
@@ -76,7 +72,7 @@ header{
     width: 50.541rem;
     height: 2.42rem;
 }
-#nav-container > nav > ul > li{
+#nav-container > nav > a{
     font-size: 1.6rem;
     font-weight: 400;
     line-height: 2.4rem;
@@ -87,6 +83,54 @@ header{
     transition: 0.3s ease;
 }
 
-#nav-container > nav > ul > li:hover{
+
+#nav-container > nav > a:hover{
     transform: scale(1.1);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 1215px) {
+    header{
+        max-height: 100%;
+        height: auto;
+        flex-flow: column nowrap;
+        align-items: center;
+        justify-content: center;
+        gap: 4rem; 
+        padding: 3rem 0;
+    }
+    #nav-container{
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+    
+    #nav-container > nav{
+        justify-content: space-between;
+        gap: 0rem;
+        max-width: 50.541rem;
+        width: 100%;
+        height: auto;
+        padding: 0 4%;
+    }
+
+    #nav-container > nav > a{
+        font-size: 1.8rem;
+    }
 }
